# microbit-music

./: README.md
embedded_software/: Cargo.toml  Embed.toml
embedded_software/.cargo/: config
embedded_software/src/: main.rs  music.rs  serial.rs  speaker.rs  uart.rs
microbit-music/: Cargo.toml
microbit-music/example/: ode_to_joy.txt
microbit-music/src/: main.rs
