[package]
name = "microbit-music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
panic-halt = "0.2.0"
rtt-target = { version =  "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version =  "0.1.2", features = ["cortex-m"] }

[dependencies.nrf52833-hal]
optional = true
version = "0.16.0"

[features]
default = ["52833"]
52833 = ["nrf52833-hal"]
